...
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersDietTypeET"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/uploadNewMealBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="UPLOAD A NEW MEAL TO THE FEED"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
